fix dark mode switch

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -26,7 +26,13 @@ $_theme: mat.define-light-theme((
 @include app-theme.theme($_theme);
 
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 
